# axum-utils

./: .gitignore  Cargo.toml  README.md
src/: error.rs  lib.rs  main.rs  static_opti.rs
src/static_opti/: embeded.rs  worker.rs
