[package]
name = "axum-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web
axum = "0.7.4"
# Async engine
tokio = { version = "1.39", features = ["signal", "macros"] }
# Fast gzip compression
libdeflater = "1.21"
# Brotli
brotli = "6.0"
# Fast hash
xxhash-rust = { version = "0.8", features = ["xxh3"] }
# Fast base 64
base64 = "0.22"
# Macro for codegen
duplicate = "1.0"
# Mime
mime_guess = "2"
# JSON
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
# Memory map
memmap2 = "0.9"
# Fast hash map
hashbrown = "0.14"
# Temporary file
tempfile = "3.12.0"
# Small and performant allocator
mimalloc = { version = "0.1", default-features = false }
# CLI utils
clap = { version = "4.5", features = ["derive"] }

# Optimal size and perf
[profile.release]
opt-level = 3
lto = "thin"