[package]
name = "axum-utils"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web
axum = "0.8.1"
# Async engine
tokio = { version = "1.39", features = ["signal", "macros"] }
# Fast gzip compression
libdeflater = "1.21"
# Brotli
brotlic = "0.8.2"
# Fast hash
xxhash-rust = { version = "0.8", features = ["xxh3"] }
# Fast base 64
base64 = "0.22"
# Macro for codegen
duplicate = "2.0"
# Mime
mime_guess = "2"
# JSON
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "2.0.1", features = ["alloc", "serde"] }
# Memory map
memmap2 = "0.9"
# Fast hash map
hashbrown = "0.16"
# Temporary file
tempfile = "3.12.0"
# Small and performant allocator
mimalloc = { version = "0.1", default-features = false }
# CLI utils
clap = { version = "4.5", features = ["derive"] }

# Optimal size and perf
[profile.release]
opt-level = 3
lto = "thin"
